@@ -80,19 +80,12 @@
         <string>Genre</string>
        </property>
        <property name="buddy">
-        <cstring>genreCombo</cstring>
+        <cstring>genreText</cstring>
        </property>
       </widget>
      </item>
      <item row="6" column="1">
-      <widget class="GenreCombo" name="genreCombo">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-      </widget>
+      <widget class="CompletionCombo" name="genreText"/>
      </item>
      <item row="7" column="0">
       <widget class="BuddyLabel" name="label_6">
@@ -193,13 +186,23 @@
     </layout>
    </item>
    <item>
-    <widget class="BuddyLabel" name="label_7">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <spacer name="verticalSpacer_3xx">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>4</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_7">
      <property name="text">
       <string>&lt;i&gt;&lt;b&gt;NOTE&lt;/b&gt; Only enter values for the tags you wish to be search on. &lt;/i&gt;</string>
      </property>
@@ -207,6 +210,48 @@
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
     </widget>
+  </item>
+  <item>
+   <spacer name="verticalSpacer_3x">
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+    <property name="sizeType">
+     <enum>QSizePolicy::Fixed</enum>
+    </property>
+    <property name="sizeHint" stdset="0">
+     <size>
+      <width>20</width>
+      <height>4</height>
+     </size>
+    </property>
+   </spacer>
+  </item>
+  <item>
+    <widget class="QLabel" name="label_7x">
+     <property name="text">
+      <string>&lt;i&gt;&lt;b&gt;NOTE&lt;/b&gt; For genre, end string with an asterisk to match various genres. e.g 'rock*' matches 'Hard Rock' and 'Rock and Roll'. &lt;/i&gt;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer_3xy">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::MinimumExpanding</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
@@ -227,11 +272,6 @@
    <header>completioncombo.h</header>
   </customwidget>
   <customwidget>
-   <class>GenreCombo</class>
-   <extends>QComboBox</extends>
-   <header>genrecombo.h</header>
-  </customwidget>
-  <customwidget>
    <class>BuddyLabel</class>
    <extends>QLabel</extends>
    <header>buddylabel.h</header>
@@ -248,7 +288,7 @@
   <tabstop>albumArtistText</tabstop>
   <tabstop>albumText</tabstop>
   <tabstop>titleText</tabstop>
-  <tabstop>genreCombo</tabstop>
+  <tabstop>genreText</tabstop>
   <tabstop>dateFromSpin</tabstop>
   <tabstop>dateToSpin</tabstop>
   <tabstop>exactCheck</tabstop>
