@@ -107,6 +107,7 @@
     actual values.
 63. If we change a genre in the tag-editor, then update genre list in views.
 64. Disable connections menu when preferences dialog is open.
+65. Allow wildcard genres. e.g. 'Rock*' for 'Hard Rock' and 'RockNRoll'
 
 0.9.2
 -----
